# cellular_automata

./: Cargo.toml  README.md  shell.nix
src/: main.rs
ui/: appwindow.slint
