[package]
name = "cellular_automata"
version = "0.1.0"
authors = ["lmills <lmills@srcaus.com.au>"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.6"
once_cell = "1.10.0"

[build-dependencies]
slint-build = "1.6"
